--- a/frontend/src/components/Pagination/Pagination.css
+++ b/frontend/src/components/Pagination/Pagination.css
@@ -1,6 +1,13 @@
 .pagination-container {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+}
+.pagination-buttons-container {
+  display: flex;
+  flex-direction: row;
   justify-content: center;
   gap: 0.5rem;
   padding: 3rem 0;
@@ -12,6 +19,11 @@
   color: #133e87;
   cursor: pointer;
   transition: all 0.3s ease;
+}
+
+.pagination-button.active {
+  color: #10316a;
+  text-decoration: underline;
 }
 
 .pagination-button:hover {
@@ -36,4 +48,17 @@
   transform: scale(1.1);
   background-color: #1d4b9c;
   opacity: 1;
+}
+
+.toggle-button:disabled {
+  opacity: 0.8;
+  background-color: lightgray;
+  cursor: not-allowed;
+}
+
+.page-size_select {
+  border: lightgray 1px solid;
+  border-radius: 5px;
+  padding: 3px;
+  color: #133e87;
 }
